--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <div class="content">
                 <h3>tasty burger</h3>
                 <p></p>
-                <a href="#" class="btn">ordern now</a>
+                <a href="#" class="btn">order now</a>
             </div>
         </div>
         <div class="box">
@@ -241,7 +241,7 @@
             <div class="content">
                 <h3>tasty kota</h3>
                 <p></p>
-                <a href="#" class="btn">ordern now</a>
+                <a href="#" class="btn">order now</a>
             </div>
         </div>
         <div class="box">
@@ -249,7 +249,7 @@
             <div class="content">
                 <h3>tasty gizzards</h3>
                 <p>.</p>
-                <a href="#" class="btn">ordern now</a>
+                <a href="#" class="btn">order now</a>
             </div>
         </div>
         <div class="box">
@@ -257,7 +257,7 @@
             <div class="content">
                 <h3>tasty food</h3>
                 <p>.</p>
-                <a href="#" class="btn">ordern now</a>
+                <a href="#" class="btn">order now</a>
             </div>
         </div>
         <div class="box">
@@ -265,7 +265,7 @@
             <div class="content">
                 <h3>drinks</h3>
                 <p></p>
-                <a href="#" class="btn">ordern now</a>
+                <a href="#" class="btn">order now</a>
             </div>
         </div>
         <div class="box">
@@ -273,7 +273,7 @@
             <div class="content">
                 <h3>tasty food</h3>
                 <p></p>
-                <a href="#" class="btn">ordern now</a>
+                <a href="#" class="btn">order now</a>
             </div>
         </div>
         
